# antigravity-k

./: .dockerignore  .editorconfig  .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  MoE_Architecture_Wiki_Export.md  README.md  SECURITY.md  agentic_upgrade_report.md  api_test_output.txt  config.yaml  config.yaml.example  docker-compose.vllm.yml  docker-entrypoint.sh  fix_cognitive.py  gcd_functions.py  generated_lru.py  mcp_upgrade_report.md  plan.md  plan_phase18.md  planning_output.txt  policy.yaml  pyproject.toml  requirements.txt  run_api_test.py  run_benchmark.py  run_e2e_test.py  run_e2e_ui_test.py  scratch_api_test.py  scratch_internal_test.py  (+30 more)
.agent/skills/antigravity-agent/: AGENT.md  CRON.md  MEMORY.md  REPORTING.md  SOUL.md
.agent/skills/antigravity-k-architecture/: SKILL.md
.agent/skills/architecture-critic/: SKILL.md
.agent/skills/autonomous-core-evolution/: SKILL.md
.agent/skills/awesome-agent-evolution/: SKILL.md
.agent/skills/bananatape/: SKILL.md
.agent/skills/browser-tdd/: SKILL.md
.agent/skills/build-from-issue/: SKILL.md
.agent/skills/claude-code-source-code/: SKILL.md
.agent/skills/claude-code-source-code-full/: SKILL.md
.agent/skills/create-spike/: SKILL.md
.agent/skills/design-an-interface/: SKILL.md
.agent/skills/diagnose/: SKILL.md
.agent/skills/domain-model/: SKILL.md
.agent/skills/edit-article/: SKILL.md
.agent/skills/evolver/: SKILL.md
.agent/skills/expose-tunnel/: SKILL.md
.agent/skills/fa-modeling/: SKILL.md
.agent/skills/financial-assistant/: SKILL.md
.agent/skills/gbrain/: SKILL.md
.agent/skills/github-triage/: SKILL.md
.agent/skills/gstack-autoplan/: SKILL.md
.agent/skills/gstack-benchmark/: SKILL.md
.agent/skills/gstack-browse/: SKILL.md
.agent/skills/gstack-canary/: SKILL.md
.agent/skills/gstack-careful/: SKILL.md
.agent/skills/gstack-connect-chrome/: SKILL.md
.agent/skills/gstack-cso/: SKILL.md
.agent/skills/gstack-design-consultation/: SKILL.md
.agent/skills/gstack-design-html/: SKILL.md
.agent/skills/gstack-design-review/: SKILL.md
.agent/skills/gstack-design-shotgun/: SKILL.md
.agent/skills/gstack-document-release/: SKILL.md
.agent/skills/gstack-freeze/: SKILL.md
.agent/skills/gstack-guard/: SKILL.md
.agent/skills/gstack-investigate/: SKILL.md
.agent/skills/gstack-land-and-deploy/: SKILL.md
.agent/skills/gstack-learn/: SKILL.md
.agent/skills/gstack-office-hours/: SKILL.md
.agent/skills/gstack-plan-ceo-review/: SKILL.md
.agent/skills/gstack-plan-design-review/: SKILL.md
.agent/skills/gstack-plan-eng-review/: SKILL.md
.agent/skills/gstack-qa/: SKILL.md
.agent/skills/gstack-qa-only/: SKILL.md
.agent/skills/gstack-retro/: SKILL.md
.agent/skills/gstack-review/: SKILL.md
.agent/skills/gstack-setup-browser-cookies/: SKILL.md
.agent/skills/gstack-setup-deploy/: SKILL.md
.agent/skills/gstack-ship/: SKILL.md
.gemini/scratch/: refactor_orch.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  container-scan.yml  deploy-benchmark-pages.yml  release.yml
analysis/: architecture_analysis.md  ble001_complete_report.md  final_analysis_report.md  ruff_cleanup_report.md  ruff_fix_report.md
dashboard/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  stryker.config.mjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  command_palette.js  main.js  main.tsx  terminal.js
data/: benchmark_results.json  token_usage.json
data/search_cache/: 그럼_로컬llm모델의_최신_동향을_확인해서_어떻게_하면_니가_업그레이드_될수_있는지를_검토해서_결과를_알려줄래.json
demo_artifacts/: upload_api_plan.md
deploy/: README.md
deploy/k8s/: deployment.yaml  namespace.yaml  service.yaml
docs/: hook-matrix-1person-business.md  test-procedure-2026-05-05.md  test-procedure-2026-05-08.md
docs/benchmark/: benchmark_data.json  benchmark_insights_report.md  index.html
prompts/: Modelfile.reasoning  persona.md  system_prompt.md
prompts/roles/: arbiter.md  architect.md  ceo.md  critic.md  default.md  designer.md  eng_manager.md  proposer.md  qa.md  worker.md
scratch/: test_adapt.py  test_fastapi_loop.py  test_tool_executor.py  test_trainer.py
scripts/: api_forwarder.py  benchmark_proactive_pipeline.py  benchmark_viz.py  demo_debate_run.py  download_models.sh  install_ollama.sh  prepare_hermes_dataset.py  setup_tunnel.py  setup_vllm_docker.sh  team_coordinator.py  test_agent_executor.py
src/: restart_trigger.py
src/antigravity_k/: __init__.py  cli.py  config.py  i18n.py  py.typed
src/demo/: todo_app.html
ssak-ai-lab/: ext_brain_output.json  index.html  main.py  tdd_output.json  test_main.py
ssak-ai-lab/css/: style.css
ssak-ai-lab/js/: script.js
swarm_mode/: config.json  llm_client.py
test_workspace/conductor/: product.md  tech-stack.md  tracks.md  workflow.md
tests/: conftest.py  out.txt  test_agent_archive.py  test_agent_program_creation.py  test_agent_tools_api.py  test_agentic_tech_radar.py  test_ambient_watchdog.py  test_api.py  test_api_cache.py  test_api_server.py  test_approval_api.py  test_approval_manager.py  test_artifact_engine.py  test_audit_logger.py  test_auth.py  test_autonomous_capabilities.py  test_autonomous_qa.py  test_base_adapter.py  test_benchmark_harness.py  test_benchmark_performance.py  test_browser_surfing_agent.py  test_browser_tools.py  test_cancel_task.py  test_cavemem_store.py  test_chunker.py  test_ci_tools.py  test_claw_integration.py  test_code_intel_hybrid_search.py  test_code_intel_impact_analyzer.py  test_code_intel_knowledge_graph.py  test_code_intel_pipeline.py  test_code_intel_staleness.py  test_code_tree_indexer.py  test_codex_transfer.py  test_commands.py  test_computer_use.py  test_config_editor_tool.py  test_context_shaper.py  test_cost_guard.py  test_data_extractor.py  (+113 more)
vscode-extension/: package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-extension/src/: extension.ts
(+953 files in other folders)
