[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-k"
dynamic = ["version"]
description = "Antigravity-K: Local Autonomous Engineering Agent for Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "pyyaml>=6.0.2,<7.0",
    "rich>=13.9.0,<14.0",
    "typer>=0.13.0,<1.0",
    "psutil>=6.1.0,<7.0",
    "aiofiles>=24.1.0,<25.0",
    "watchfiles>=0.24.0,<2.0",
    "mcp>=1.1.2,<2.0",
    "networkx>=3.0,<4.0",
    "rank-bm25>=0.2.2,<0.3",
    "nest-asyncio>=1.6.0,<2.0",
    "cryptography>=48.0.0,<50.0",
    "textual>=8.0.0,<9.0",
    "filelock>=3.16.0,<4.0",
    "pyjwt>=2.8.0,<3.0",
    "slowapi>=0.1.9,<1.0",
    "prometheus_client>=0.21.0,<1.0",
]

[project.optional-dependencies]
# Apple Silicon MLX 추론 (Mac 전용)
mlx = [
    "mlx>=0.22.0,<1.0",
    "mlx-lm>=0.31.0,<1.0",
    "mlx-vlm>=0.2.0,<0.3",
]
# RAG / 문서 파싱
rag = [
    "chromadb>=0.5.0,<1.0",
    "sentence-transformers>=2.7.0,<4.0",
    "python-docx>=1.1.0,<2.0",
    "pymupdf>=1.24.0,<2.0",
    "openpyxl>=3.1.0,<4.0",
    "markdown>=3.7,<4.0",
]
# 개발 & 테스트
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<2.0",
    "ruff>=0.8.0,<1.0",
    "playwright>=1.40.0,<2.0",
]
# 외부 통합 (Discord/Slack 봇, 웹 스크래핑) — 선택적
integrations = [
    "discord.py>=2.4.0,<3.0",
    "slack_sdk>=3.27.0,<4.0",
    "slack_bolt>=1.20.0,<2.0",
    "markdownify>=0.14.1,<1.0",
    "beautifulsoup4>=4.12.0,<5.0",
]
# 파인튜닝 (데이터셋 처리, LoRA) — 선택적
finetune = [
    "datasets>=2.19.0,<4.0",
    "alembic>=1.13.0,<2.0",
]

[project.scripts]
agk = "antigravity_k.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
# Single source of truth: src/antigravity_k/__init__.py::__version__
version = {attr = "antigravity_k.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "benchmark: 성능 회귀 테스트 (latency 임계값 검증)",
    "slow: 실행 시간이 긴 느린 테스트 (CI에서 -m 'not slow'로 제외 가능)",
]

[tool.coverage.run]
source = ["src/antigravity_k"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
# Minimum coverage threshold (increasing over time).
# Core modules now at 58-98% (2026-07). Target: 60% overall by next release.
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 120
# JavaScript 파일은 ruff가 Python linter이므로 제외
exclude = ["dashboard/", "*.js", "*.jsx", "*.mjs"]

[tool.ruff.lint]
# The current codebase still contains legacy route modules and compact helper
# blocks that rely on local imports and one-line statements. Keep the static
# gate focused on correctness issues such as undefined names and unused symbols.
extend-ignore = ["E402", "E701", "E702"]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["antigravity_k"]

[tool.mypy]
ignore_missing_imports = true
# 점진적 타입 안전성 강화 — 단계적으로 활성화
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
# 향후 활성화 목표:
# disallow_untyped_defs = true
# disallow_any_unimported = true

[[tool.mypy.overrides]]
# Tests can be more lenient
module = ["tests.*"]
ignore_missing_imports = true

# [[tool.mypy.overrides]]
# Core engine modules — strictness 증가 대상
# 향후 활성화 (주석 처리된 상태로 유지):
# module = ["antigravity_k.engine.config", "antigravity_k.engine.vault"]
# strict_optional = true
# disallow_untyped_defs = true

[tool.coverage.html]
directory = "coverage_html"
title = "Antigravity-K Coverage Report"
